Refactoring correspondences
