# src/main/java/fr/insee/rmes/api/correspondences/CorrespondenceDescriptionsList.java
@@ -7,7 +7,7 @@ import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlElementWrapper;
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement;
 
-@JacksonXmlRootElement(localName="DescriptionsTablesCorrespondance")
+@JacksonXmlRootElement(localName="TablesDeCorrespondance")
 public class CorrespondenceDescriptionsList {
 
 	private List<CorrespondenceDescription> itemsList = new ArrayList<CorrespondenceDescription>();
@@ -21,7 +21,7 @@ public class CorrespondenceDescriptionsList {
 		this.itemsList = itemsList;
 	}
 
-	@JacksonXmlProperty(isAttribute = true, localName = "DescriptionTableCorrespondance")
+	@JacksonXmlProperty(isAttribute = true, localName = "TableDeCorrespondance")
 	@JacksonXmlElementWrapper(useWrapping = false)
 	public List<CorrespondenceDescription> getItemsList() {
 		return itemsList;
